User johns
Date:

    Fix bug: transposed digits 567 should be 576.
    Audio module cleanup:
    Alsa + OSS can be included/build at the same time.
    Alsa or OSS can be runtime selected with -a.
    Add audio thread support to OSS module.
    Add polled audio support to alsa module.
    Removed some debug source code.

Date: Sun Jan 15 16:56:04 CET 2012

    Release Version 0.3.1
    Fix bug: AudioFreeBytes didn't check if audio running/compiled.
    Fix bug: snd_pcm_state: Assertion `pcm' failed.
    Add support for fullscreen and fullscreen toogle.
    Instant update deinterlace configuration changes.
    Fix subtitle position.
    Add SVDRP support.
    Suspend when user is inactive.

User Christian Rupper
Date: Tue Jan 10 22:33:14 CET 2012

    Move objects before $LIBS to avoid link failures with --as-needed.
    Do not override CFLAGS for video test.
    Rearrange *FLAGS incl. some minor fixes.
    Don't override VDRDIR, LIBDIR and TMPDIR in makefile.
    Don't abuse LDFLAGS in makefile.
    Define CC in makefile.
    Include GL/gl.h for the GL_COLOR_BUFFER_BIT definition.
    VideoInit() needs an argument.

User johns
Date: Tue Jan 10 22:32:50 CET 2012

    Add main menu entry, which suspends the plugin.
    Add support for resize window.
    Close window sends "close" as remote key press.

Date: Mon Jan  9 22:09:38 CET 2012

    Release Version 0.3.0
    Add support of resolution dependend video parameters (deint, scale, ...).
    Add support for recording play back.
    Add workaround for alsa crash in snd_pcm_prepare.
    Fix bug: audio crash on exit.
    Fix build with vdr without yaepg support.
    Support yaepghd video picture output position change.

Date: Sat Jan  7 13:20:07 CET 2012

    Release Version 0.2.0
    Add support for ac3 audio pass through.
    Add workaround for alsa not playing hdmi sound.
    Fix bug: broken device plugin stop and exit.
    Show transparent cursor to hide cursor.
    VDPAU: Add color standard support.